--- a/index.html
+++ b/index.html
@@ -7,20 +7,31 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="inter-font">
-    <header>
-        <nav class="navbar">
-            <h3 class="brand">Fitness</h3>
-            <ul nav-links>
+    <header class="bg-banner">
+        <nav class="navbar display-flex">
+            <h3 class="brand"><i>Fitness</i></h3>
+            <ul class="nav-links display-flex">
                 <!-- li.nav-item*4>a.nav-link -->
-                <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Service</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                <li class="nav-item nav-btn "><a href="" class="nav-link text-white ">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-white ">Service</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-white">Contact</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-white">About</a></li>
                 
                 
             </ul>
         </nav>
-
+        <div class="banner display-flex">
+            <div class="banner-content">
+                <h1 class="banner-tittle text-white">Get body in <br> <span class="dancing-script-font
+                    ">shape</span> & stay <br>healthy</h1>
+                    <p class="banner-description text-gray">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                   <div class="display-flex"> 
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="download-btn">Download App</button>
+                </div>
+            </div>
+                <img src="images/Images 2.png" class="banner-image" alt="">
+        </div>
     </header>
     <main>
 
